# hoppy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.nix.md  build.sh  cabal.project  common.sh  cppop.cabal  default.nix  install-haskell.sh  install.sh  pkgs.nix
cppop/: cppop.cabal  default.nix
cppop/include/cppop/: iterator.hpp
cppop/src/Foreign/Cppop/: Common.hs
cppop/src/Foreign/Cppop/Common/: Consume.hs
cppop/src/Foreign/Cppop/Generator/: Main.hs  Spec.hs  Std.hs
cppop/src/Foreign/Cppop/Generator/Language/: Cpp.hs  Haskell.hs
cppop/src/Foreign/Cppop/Generator/Language/Cpp/: General.hs
cppop/src/Foreign/Cppop/Generator/Language/Haskell/: General.hs  General.hs-boot
cppop/src/Foreign/Cppop/Generator/Spec/: ClassFeature.hs  Template.hs  Template.hs-boot
cppop/src/Foreign/Cppop/Generator/Std/: List.hs  String.hs  Vector.hs
cppop/src/Foreign/Cppop/Runtime/: Support.hs
docs/: Setup.hs  default.nix  hoppy-docs.cabal
docs/src/Foreign/Hoppy/Documentation/: UsersGuide.hs
example/: README.md  clean.sh  (+1 more)
example/example/: Setup.hs  default.nix  hoppy-example.cabal
example/example-cpp/: Makefile  Setup.hs  default.nix  hoppy-example-cpp.cabal
example/example-cpp/cpp/: utils.cpp  utils.hpp
example/example-cpp/src/Foreign/Hoppy/Example/Internal/: EmptyCpp.hs
example/example-generator/: default.nix  hoppy-example-generator.cabal
example/example-generator/src-exe/: Main.hs
example/example-generator/src/Foreign/Hoppy/Example/: Generator.hs
example/example-generator/src/Foreign/Hoppy/Example/Internal/: EmptyGenerator.hs
example/example/src-exe/: Main.hs
example/example/tests/: Main.hs
examples/templates/hs/: Main.hs  cppop-example-templates.cabal  default.nix  hoppy-example-templates.cabal
examples/two-package-example/example-generator/: default.nix  hoppy-two-package-example-generator.cabal
examples/two-package-example/example-generator/src/Foreign/Hoppy/Examples/TwoPackage/: Generator.hs
generator/: Setup.hs  default.nix  hoppy-generator.cabal
generator/src/Foreign/Hoppy/Generator/: Common.hs  Compiler.hs  Hook.hs  Hook.hs-boot  Main.hs  Override.hs  Spec.hs  Types.hs  Util.hs  Version.hs
generator/src/Foreign/Hoppy/Generator/Common/: Consume.hs
generator/src/Foreign/Hoppy/Generator/Language/: Cpp.hs  Cpp.hs-boot  Haskell.hs  Haskell.hs-boot
generator/src/Foreign/Hoppy/Generator/Language/Cpp/: General.hs  Internal.hs
generator/src/Foreign/Hoppy/Generator/Language/Haskell/: General.hs  General.hs-boot  Internal.hs
generator/src/Foreign/Hoppy/Generator/Spec/: Base.hs  Base.hs-boot  Callback.hs  Callback.hs-boot  Class.hs  Class.hs-boot  ClassFeature.hs  Computed.hs  Conversion.hs  Enum.hs  Enum.hs-boot  Function.hs  Function.hs-boot  Variable.hs
hoppy/: default.nix  hoppy.cabal
hoppy/include/hoppy/: iterator.hpp  map.hpp  set.hpp  utility.hpp
hoppy/src/Foreign/Hoppy/: Common.hs  Documentation.hs  Paths.hs  Runtime.hs
hoppy/src/Foreign/Hoppy/Common/: Consume.hs
hoppy/src/Foreign/Hoppy/Generator/: Main.hs  Spec.hs  Std.hs  Version.hs
hoppy/src/Foreign/Hoppy/Generator/Language/: Cpp.hs  Haskell.hs
hoppy/src/Foreign/Hoppy/Generator/Language/Cpp/: General.hs
hoppy/src/Foreign/Hoppy/Generator/Language/Haskell/: General.hs  General.hs-boot
hoppy/src/Foreign/Hoppy/Generator/Spec/: ClassFeature.hs  Template.hs  Template.hs-boot
hoppy/src/Foreign/Hoppy/Generator/Std/: List.hs  Map.hs  Pair.hs  Set.hs  String.hs  Vector.hs
hoppy/src/Foreign/Hoppy/Runtime/: Support.hs
runtime/: Setup.hs  default.nix  hoppy-runtime.cabal
runtime/src/Foreign/Hoppy/: Runtime.hs  Setup.hs
tests/basic/generator/: Main.hs  cppop-tests-basic-generator.cabal  default.nix  hoppy-tests-basic-generator.cabal
tests/basic/hs/: Main.hs  Setup.hs  cppop-tests-basic.cabal  default.nix  hoppy-tests-basic.cabal
tests/basic/hs/Foreign/Cppop/Test/Basic/: HsBox.hs
tests/basic/hs/Foreign/Hoppy/Test/Basic/: HsBox.hs
tests/circular/generator/: Main.hs  cppop-tests-circular-generator.cabal  default.nix  hoppy-tests-circular-generator.cabal
tests/circular/generator/Foreign/Cppop/Generator/Test/Circular/: Flob.hs  Flob.hs-boot  Flub.hs
tests/circular/generator/Foreign/Hoppy/Generator/Test/Circular/: Flob.hs  Flob.hs-boot  Flub.hs
tests/generator/: Main.hs  Setup.hs  default.nix  hoppy-tests-generator.cabal
tests/generator/Foreign/Hoppy/Test/Interfaces/: Basic.hs  Circular.hs  Compiler.hs  Stl.hs
tests/generator/Foreign/Hoppy/Test/Interfaces/Circular/: Flob.hs  Flob.hs-boot  Flub.hs
tests/generator/src/Foreign/Hoppy/Test/: EmptyGenerator.hs
tests/generator/src/Foreign/Hoppy/Test/Interfaces/: Basic.hs  Circular.hs  Enumeval.hs  Stl.hs
tests/hs/basic/: Main.hs  hoppy-tests-basic.cabal
tests/hs/basic/Foreign/Hoppy/Test/Basic/: HsBox.hs
tests/hs/circular/: Main.hs  hoppy-tests-circular.cabal
tests/hs/stl/: Main.hs  hoppy-tests-stl.cabal
tests/stl/generator/: Main.hs  Setup.hs  cppop-tests-stl-generator.cabal  default.nix  hoppy-tests-stl-generator.cabal
tests/suites/basic/cpp/: Makefile  Setup.hs  default.nix  hoppy-tests-basic-cpp.cabal
tests/suites/basic/cpp/cpp/: class-prefixes.hpp  constants.cpp  constants.hpp  enum.hpp  exceptions.hpp  functions.cpp  functions.hpp  inheritance.hpp  intbox.hpp  ptrctr.cpp  ptrctr.hpp  undeletable.cpp  undeletable.hpp
tests/suites/basic/hs/: Main.hs  Setup.hs  default.nix  hoppy-tests-basic.cabal
tests/suites/circular/cpp/: Makefile  Setup.hs  default.nix  hoppy-tests-circular-cpp.cabal
tests/suites/circular/cpp/cpp/: flob.cpp  flob.hpp  flub.cpp  flub.hpp
tests/suites/circular/hs/: Main.hs  Setup.hs  default.nix  hoppy-tests-circular.cabal
tests/suites/enumeval/cpp/: Makefile  Setup.hs  default.nix  hoppy-tests-enumeval-cpp.cabal
tests/suites/enumeval/cpp/cpp/: enums.cpp  enums.hpp
tests/suites/enumeval/hs/: Main.hs  Setup.hs  default.nix  hoppy-tests-enumeval.cabal
tests/suites/stl/cpp/: Makefile  Setup.hs  default.nix  hoppy-tests-stl-cpp.cabal
tests/suites/stl/cpp/cpp/: intbox.hpp
tests/suites/stl/hs/: Main.hs  Setup.hs  default.nix  hoppy-tests-stl.cabal
(+221 files in other folders)
