name: cppop
version: 0.1.0
synopsis: C++ FFI generator for Haskell
-- description:
homepage: http://khumba.net/projects/cppop
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Language
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
      Foreign.Cppop.Common
    , Foreign.Cppop.Generator.Language.Cpp.General
    , Foreign.Cppop.Generator.Language.Haskell.General
    , Foreign.Cppop.Generator.Main
    , Foreign.Cppop.Generator.Spec
    , Foreign.Cppop.Generator.Spec.ClassFeature
    , Foreign.Cppop.Generator.Std
    , Foreign.Cppop.Generator.Std.List
    , Foreign.Cppop.Generator.Std.String
    , Foreign.Cppop.Generator.Std.Vector
    , Foreign.Cppop.Runtime.Support
  other-modules:
      Foreign.Cppop.Common.Consume
    , Foreign.Cppop.Generator.Language.Cpp
    , Foreign.Cppop.Generator.Language.Haskell
  default-extensions:
      ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , ScopedTypeVariables
    , UndecidableInstances
  build-depends:
      base >=4.8 && <4.9
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , containers >=0.5 && <0.6
    , directory >=1.2 && <1.3
    , filepath >=1.3 && <1.5
    , haskell-src >=1.0 && <1.1
    , mtl >=2.1 && <2.3
    , text >=1.2 && <1.3
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
