name: hoppy-docs
version: 0.1.0
synopsis: C++ FFI generator for Haskell - Documentation
-- description:
homepage: http://khumba.net/projects/hoppy
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Language
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
      Foreign.Hoppy.Documentation.UsersGuide
  build-depends:
      base >=4.7 && <4.9
    , haskell-src >=1.0 && <1.1
    , hoppy-generator >=0.1 && <0.2
    , hoppy-runtime >=0.1 && <0.2
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
