name: hoppy-generator
version: 0.1.0
synopsis: C++ FFI generator for Haskell - Code generator
-- description:
homepage: http://khumba.net/projects/hoppy
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Language
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
      Foreign.Hoppy.Generator.Language.Cpp.General
    , Foreign.Hoppy.Generator.Language.Haskell.General
    , Foreign.Hoppy.Generator.Main
    , Foreign.Hoppy.Generator.Spec
    , Foreign.Hoppy.Generator.Spec.ClassFeature
    , Foreign.Hoppy.Generator.Version
  other-modules:
      Foreign.Hoppy.Generator.Common
    , Foreign.Hoppy.Generator.Common.Consume
    , Foreign.Hoppy.Generator.Language.Cpp
    , Foreign.Hoppy.Generator.Language.Haskell
  default-extensions:
      FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , MultiParamTypeClasses
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , directory >=1.2 && <1.3
    , filepath >=1.3 && <1.5
    , haskell-src >=1.0 && <1.1
    , mtl >=2.1 && <2.3
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
