name: hoppy
version: 0.1.0
synopsis: C++ FFI generator for Haskell
-- description:
homepage: http://khumba.net/projects/hoppy
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Language
build-type: Simple
cabal-version: >=1.10

data-files:
    include/hoppy/iterator.hpp
  , include/hoppy/map.hpp
  , include/hoppy/set.hpp
  , include/hoppy/utility.hpp

library
  exposed-modules:
      Foreign.Hoppy.Common
    , Foreign.Hoppy.Documentation
    , Foreign.Hoppy.Generator.Language.Cpp.General
    , Foreign.Hoppy.Generator.Language.Haskell.General
    , Foreign.Hoppy.Generator.Main
    , Foreign.Hoppy.Generator.Spec
    , Foreign.Hoppy.Generator.Spec.ClassFeature
    , Foreign.Hoppy.Generator.Std
    , Foreign.Hoppy.Generator.Std.List
    , Foreign.Hoppy.Generator.Std.Map
    , Foreign.Hoppy.Generator.Std.Pair
    , Foreign.Hoppy.Generator.Std.Set
    , Foreign.Hoppy.Generator.Std.String
    , Foreign.Hoppy.Generator.Std.Vector
    , Foreign.Hoppy.Generator.Version
    , Foreign.Hoppy.Paths
    , Foreign.Hoppy.Runtime.Support
  other-modules:
      Foreign.Hoppy.Common.Consume
    , Foreign.Hoppy.Generator.Language.Cpp
    , Foreign.Hoppy.Generator.Language.Haskell
    , Paths_hoppy
  default-extensions:
      ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , ScopedTypeVariables
    , UndecidableInstances
  build-depends:
      base >=4.8 && <4.9
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , containers >=0.5 && <0.6
    , directory >=1.2 && <1.3
    , filepath >=1.3 && <1.5
    , haskell-src >=1.0 && <1.1
    , mtl >=2.1 && <2.3
    , text >=1.2 && <1.3
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
