name: hoppy-runtime
version: 0.1.0
synopsis: C++ FFI generator for Haskell - Runtime support
-- description:
homepage: http://khumba.net/projects/hoppy
license: Apache-2.0
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Language
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
      Foreign.Hoppy.Runtime
  default-extensions:
      FlexibleInstances
    , FunctionalDependencies
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
  build-depends:
      base >=4.7 && <4.9
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
