name: hoppy-example-cpp
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2017 Bryan Gardiner
build-type: Custom
cabal-version: >=1.10

extra-source-files:
  Makefile
  cpp/utils.cpp
  cpp/utils.hpp

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Example.Internal.EmptyCpp
  build-depends:
      base
    , hoppy-example-generator
    , hoppy-runtime
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  build-depends:
      base
    , containers
    , hoppy-runtime
    , hoppy-tests-basic
    , HUnit
