name: hoppy-example-generator
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2023 Bryan Gardiner
build-type: Simple
cabal-version: 2.0

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Example.Generator
  build-depends:
      base
    , hoppy-generator >=0.9 && <0.10
    , hoppy-std >=0.9 && <0.10
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

executable hoppy-example-generator
  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
      base
    , hoppy-example-generator
    , hoppy-generator >=0.9 && <0.10
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
