name: hoppy-tests-generator
version: 0.3.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2019 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  other-modules:
      Foreign.Hoppy.Test.EmptyGenerator
  build-depends:
      base
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

executable hoppy-tests-generator
  main-is: Main.hs
  other-modules:
      Foreign.Hoppy.Test.Interfaces.Basic
    , Foreign.Hoppy.Test.Interfaces.Circular
    , Foreign.Hoppy.Test.Interfaces.Circular.Flob
    , Foreign.Hoppy.Test.Interfaces.Circular.Flub
    , Foreign.Hoppy.Test.Interfaces.Compiler
    , Foreign.Hoppy.Test.Interfaces.Stl
  build-depends:
      base >=4.7 && <5
    , filepath >= 1.4 && <1.5
    , haskell-src >=1.0 && <1.1
    , hoppy-generator
    , hoppy-std
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
