name: hoppy-tests-generator
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2023 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Test.Interfaces.Basic
    , Foreign.Hoppy.Test.Interfaces.Circular
    , Foreign.Hoppy.Test.Interfaces.Enumeval
    , Foreign.Hoppy.Test.Interfaces.Stl
  other-modules:
      Foreign.Hoppy.Test.Interfaces.Circular.Flob
    , Foreign.Hoppy.Test.Interfaces.Circular.Flub
  build-depends:
      base >=4.10 && <5
    , filepath >= 1.4 && <1.5
    , haskell-src >=1.0 && <1.1
    , hoppy-generator
    , hoppy-std
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
