name: cppop-example-templates
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

executable cppop-example-templates
  main-is: Main.hs
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.8 && <4.9
    , cppop
  default-language: Haskell2010
  extra-libraries: cppop-example-templates
