name: hoppy-tests-basic-generator
version: 0.2.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

executable generator
  main-is: Main.hs
  build-depends:
      base >=4.7 && <4.9
    , haskell-src >=1.0 && <1.1
    , hoppy-generator
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
