name: cppop-tests-basic
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  main-is: Main.hs
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.8 && <4.9
    , cppop
  default-language: Haskell2010
  extra-libraries: cppop-tests-basic

test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      base >= 4.8 && < 4.9
    , cppop-tests-basic
    , HUnit
