name: hoppy-tests-basic
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.8 && <4.9
    , hoppy
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  extra-libraries: hoppy-tests-basic

test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  build-depends:
      base >= 4.8 && < 4.9
    , hoppy
    , hoppy-tests-basic
    , HUnit
