name: hoppy-tests-basic
version: 0.3.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2018 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.7 && <5
    , hoppy-runtime
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  extra-libraries: hoppy-tests-basic

test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Foreign.Hoppy.Test.Basic
    , Foreign.Hoppy.Test.Basic.HsBox
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  build-depends:
      base >=4.7 && <5
    , containers >=0.5 && <0.6
    , hoppy-runtime
    , hoppy-tests-basic
    , HUnit
