name: hoppy-tests-stl
version: 0.3.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2018 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.7 && <5
    , hoppy-runtime
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  extra-libraries: hoppy-tests-stl

test-suite tests-stl
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Foreign.Hoppy.Test.Std
    , Foreign.Hoppy.Test.Stl
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  build-depends:
      base >=4.7 && <5
    , hoppy-runtime
    , hoppy-tests-stl
    , HUnit
