name: cppop-tests-stl-generator
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

executable generator
  main-is: Main.hs
  build-depends:
      base >=4.8 && <4.9
    , cppop
    , haskell-src >= 1.0 && < 1.1
  default-language: Haskell2010
