name: hoppy-tests-basic
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2023 Bryan Gardiner
build-type: Custom
cabal-version: >=1.10

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime
    , hoppy-tests-generator

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.10 && <5
    , containers >=0.5 && <0.7
    , hoppy-runtime
    , hoppy-tests-basic-cpp
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Test.Basic
    , Foreign.Hoppy.Test.Basic.HsBox
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  extra-libraries: hoppy-tests-basic

-- base-4.9 is required for HasCallStack.
test-suite tests-basic
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-extensions:
      LambdaCase
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic
  extra-libraries: hoppy-tests-basic
  build-depends:
      base >=4.10 && <5
    , hoppy-runtime
    , hoppy-tests-basic
    , HUnit
