name: hoppy-tests-circular
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2023 Bryan Gardiner
build-type: Custom
cabal-version: 2.0

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime
    , hoppy-tests-generator

library
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base >=4.10 && <5
    , hoppy-runtime
    , hoppy-tests-circular-cpp
  exposed-modules:
      Foreign.Hoppy.Test.Flob
    , Foreign.Hoppy.Test.Flub
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  extra-libraries: hoppy-tests-circular

test-suite tests-circular
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic
  extra-libraries: hoppy-tests-circular
  build-depends:
      base >=4.10 && <5
    , hoppy-runtime
    , hoppy-tests-circular
    , HUnit
