name: hoppy-tests-stl-cpp
version: 0.1.0
license: AGPL-3
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2019 Bryan Gardiner
build-type: Custom
cabal-version: >=1.10

extra-source-files:
  Makefile
  cpp/intbox.hpp

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.6 && <0.7

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Test.Stl.EmptyCpp
  build-depends:
      base
    , hoppy-runtime >=0.6 && <0.7
    , hoppy-tests-generator
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
